# space

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  space.spec  space.spec.in
doc/: Makefile.am  Makefile.in  space.1  space.info  space.texi  version.texi
libgnu/: Makefile.am  Makefile.in
libgnu/m4/: gnulib-comp.m4
scripts/: Makefile.am  Makefile.in  getSeqList.pl  matchPattern.pl
src/: Makefile.am  Makefile.in  cmd.example  command.c  command.h  seqlist.c  seqlist.h  space.c  space.db.sample  space.h  state.h
tests/: Makefile.am  Makefile.in  package.m4  space.at  space.in  testsuite  testsuite.at
util/: Makefile.am  Makefile.in  clp2.h  mbuf.c  mbuf.h  sockutil.c  sockutil.h  token.c  token.h  xarray.c  xarray.h
